[Fix] Overflow

--- a/components/navbar/navbar.module.scss
+++ b/components/navbar/navbar.module.scss
@@ -23,6 +23,8 @@
                 color: transparent;
                 display: block;
                 height: 100%;
+                width: 25px;
+                overflow: hidden;
             }
         }
     }
